# wgpu_validation_error

./: Cargo.toml  message.md
src/: main.rs  shader.wgsl
