[package]
name = "validation_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14"
winit = "0.27"
pollster = "0.2"
bytemuck = { features = ["derive"], version = "1.12"}
log = "0.4"
env_logger = "0.9"
